# Platform-engineering-and-developer-portal

./: .env.example  .gitignore  .gitleaks.toml  Makefile  README.md  package-lock.json  package.json
.cursor/: settings.json
.github/workflows/: ci-backstage.yml  ci-platform.yml  ci.yml  reusable-build-docker.yml  reusable-dast-scan.yml  reusable-deploy.yml  reusable-lint.yml  reusable-policy-check.yml  reusable-sast-scan.yml  reusable-test-e2e.yml  reusable-test-integration.yml  reusable-test-load.yml  reusable-test-unit.yml
.husky/: pre-commit
backstage/: app-config.yaml
backstage-app/: app-config.yaml
backstage/catalog/: biomedical-catalog.yml  mkdocs.yml  veyor-catalog.yml
core/istio-ambient/: ambient-mesh.yml
core/kyverno-policies/: global-policies.yml  kyverno-test.yaml  test-resources.yml
core/openbao/: statefulset.yml
golden-paths/agent-guardrails/: AGENT_INSTRUCTIONS.md  ARCHITECTURE_BIOMEDICAL.md  ARCHITECTURE_VEYOR.md  CODING_STANDARDS.md  INFRASTRUCTURE_GUARDRAILS.md  PR_CHECKLIST.md  SECURITY_GUARDRAILS.md  TESTING_STRATEGY.md
golden-paths/templates/: golden-path-templates.yml
golden-paths/templates/new-microservice/skeleton-python/: Dockerfile  pyproject.toml
golden-paths/templates/new-microservice/skeleton-python/app/: main.py
golden-paths/templates/new-microservice/skeleton-python/tests/: test_main.py
platform/argocd/: app-of-apps.yml
platform/feature-flags/: features.json  flagsmith-deployment.yml  flipt-deployment.yml
projects/literature-synthesis-agent/: Dockerfile  catalog-info.yaml  pyproject.toml
projects/literature-synthesis-agent/.github/workflows/: ci.yml
projects/literature-synthesis-agent/src/: main.py
projects/literature-synthesis-agent/src/agents/: synthesis_agent.py
projects/literature-synthesis-agent/src/tools/: audit.py  retrieval.py
projects/literature-synthesis-agent/tests/unit/: test_synthesis_agent.py
(+142 files in other folders)
